--- a/c/html/develop/igraph-Glossary.html
+++ b/c/html/develop/igraph-Glossary.html
@@ -10,7 +10,7 @@ langversion: develop
 
 {% raw %}
 <div class="navigation-header mb-4" width="100%" summary="Navigation header"><div class="btn-group">
-<a accesskey="p" class="btn btn-light" href="igraph-Nongraph.html"><i class="fa fa-chevron-left"></i>
+<a accesskey="p" class="btn btn-light" href="igraph-Advanced.html"><i class="fa fa-chevron-left"></i>
               Previous
             </a><a accesskey="h" class="btn btn-light" href="index.html"><i class="fa fa-home"></i>
               Home
@@ -20,7 +20,7 @@ langversion: develop
 </div></div>
 <div class="chapter">
 <div class="titlepage"><div><div><h1 class="title">
-<a name="igraph-Glossary"></a>Chapter 33. Glossary</h1></div></div></div>
+<a name="igraph-Glossary"></a>Chapter 35. Glossary</h1></div></div></div>
 <p>
     This glossary defines common terms used throughout the igraph
     documentation.
@@ -166,7 +166,7 @@ langversion: develop
 </ul></div>
 </div>
 <table class="navigation-footer" width="100%" summary="Navigation footer" cellpadding="2" cellspacing="0"><tr valign="middle">
-<td align="left"><a accesskey="p" href="igraph-Nongraph.html"><b>← Chapter 32. Non-graph related functions </b></a></td>
-<td align="right"><a accesskey="n" href="igraph-Licenses.html"><b>Chapter 34. Licenses for igraph and this manual →</b></a></td>
+<td align="left"><a accesskey="p" href="igraph-Advanced.html"><b>← Chapter 34. Advanced igraph programming</b></a></td>
+<td align="right"><a accesskey="n" href="igraph-Licenses.html"><b>Chapter 36. Licenses for igraph and this manual →</b></a></td>
 </tr></table>
 {% endraw %}
