--- a/c/html/develop/igraph-Graphlets.html
+++ b/c/html/develop/igraph-Graphlets.html
@@ -20,7 +20,7 @@ langversion: develop
 </div></div>
 <div class="chapter">
 <div class="titlepage"><div><div><h1 class="title">
-<a name="igraph-Graphlets"></a>Chapter 25. Graphlets</h1></div></div></div>
+<a name="igraph-Graphlets"></a>Chapter 26. Graphlets</h1></div></div></div>
 <div class="toc"><dl class="toc">
 <dt><span class="section"><a href="igraph-Graphlets.html#about-graphlets">1.  Introduction</a></span></dt>
 <dt><span class="section"><a href="igraph-Graphlets.html#performing-graphlet-decomposition">2. Performing graphlet decomposition</a></span></dt>
@@ -71,13 +71,13 @@ in the literature. If you are looking to count induced subgraphs, see
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
 <a name="igraph_graphlets"></a>2.1. <code class="function">igraph_graphlets</code> —  Calculate graphlets basis and project the graph on it.</h3></div></div></div>
-<a class="indexterm" name="id-1.26.3.2.2"></a><p>
+<a class="indexterm" name="id-1.27.3.2.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_graphlets(const igraph_t *graph,
                      const igraph_vector_t *weights,
                      igraph_vector_int_list_t *cliques,
-                     igraph_vector_t *Mu, igraph_integer_t niter);
+                     igraph_vector_t *Mu, igraph_int_t niter);
 </pre></div>
 <p>
 </p>
@@ -159,7 +159,7 @@ See also: <a class="link" href="igraph-Graphlets.html#igraph_graphlets_candidate
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
 <a name="igraph_graphlets_candidate_basis"></a>2.2. <code class="function">igraph_graphlets_candidate_basis</code> — Calculate a candidate graphlets basis</h3></div></div></div>
-<a class="indexterm" name="id-1.26.3.3.2"></a><p>
+<a class="indexterm" name="id-1.27.3.3.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_graphlets_candidate_basis(const igraph_t *graph,
@@ -237,14 +237,14 @@ See also: <a class="link" href="igraph-Graphlets.html#igraph_graphlets" title="2
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
 <a name="igraph_graphlets_project"></a>2.3. <code class="function">igraph_graphlets_project</code> —  Project a graph on a graphlets basis.</h3></div></div></div>
-<a class="indexterm" name="id-1.26.3.4.2"></a><p>
+<a class="indexterm" name="id-1.27.3.4.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_graphlets_project(const igraph_t *graph,
                              const igraph_vector_t *weights,
                              const igraph_vector_int_list_t *cliques,
                              igraph_vector_t *Mu, igraph_bool_t startMu,
-                             igraph_integer_t niter);
+                             igraph_int_t niter);
 </pre></div>
 <p>
 </p>
@@ -337,7 +337,7 @@ See also: <a class="link" href="igraph-Graphlets.html#igraph_graphlets" title="2
 </div>
 </div>
 <table class="navigation-footer" width="100%" summary="Navigation footer" cellpadding="2" cellspacing="0"><tr valign="middle">
-<td align="left"><a accesskey="p" href="igraph-Community.html"><b>← Chapter 24. Detecting community structure</b></a></td>
-<td align="right"><a accesskey="n" href="igraph-HRG.html"><b>Chapter 26. Hierarchical random graphs →</b></a></td>
+<td align="left"><a accesskey="p" href="igraph-Community.html"><b>← Chapter 25. Detecting community structure</b></a></td>
+<td align="right"><a accesskey="n" href="igraph-HRG.html"><b>Chapter 27. Hierarchical random graphs →</b></a></td>
 </tr></table>
 {% endraw %}
