--- a/c/html/master/igraph-Bipartite.html
+++ b/c/html/master/igraph-Bipartite.html
@@ -440,9 +440,9 @@ edges.
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_bipartite_game_gnp(igraph_t *graph, igraph_vector_bool_t *types,
-                              igraph_integer_t n1, igraph_integer_t n2,
-                              igraph_real_t p, igraph_bool_t directed,
-                              igraph_neimode_t mode);
+                                         igraph_integer_t n1, igraph_integer_t n2,
+                                         igraph_real_t p, igraph_bool_t directed,
+                                         igraph_neimode_t mode);
 </pre></div>
 <p>
 </p>
@@ -1154,6 +1154,23 @@ can be mapped independently.
 
 Time complexity: O(|V|+|E|), linear in the number of vertices and
 edges.
+
+</p>
+<p><b>See also: </b></p>
+<div class="variablelist"><table border="0" class="variablelist">
+<colgroup>
+<col align="left" valign="top">
+<col>
+</colgroup>
+<tbody><tr>
+<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
+<td><p>
+  igraph_is_bipartite_coloring() do determine if all edges connect
+vertices of different types, given a specific type vector.
+  </p></td>
+</tr></tbody>
+</table></div>
+<p>
  
 </p>
 </div>
