--- a/c/html/master/igraph-Layout.html
+++ b/c/html/master/igraph-Layout.html
@@ -31,7 +31,7 @@ langversion: master
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
 <a name="two-d-layout-generators"></a>1. 2D layout generators</h2></div></div></div>
 <div class="toc"><dl class="toc">
-<dt><span class="section"><a href="igraph-Layout.html#igraph_layout_random">1.1. <code class="function">igraph_layout_random</code> —  Places the vertices uniform randomly on a plane.</a></span></dt>
+<dt><span class="section"><a href="igraph-Layout.html#igraph_layout_random">1.1. <code class="function">igraph_layout_random</code> —  Places the vertices uniformly randomly within a square.</a></span></dt>
 <dt><span class="section"><a href="igraph-Layout.html#igraph_layout_circle">1.2. <code class="function">igraph_layout_circle</code> —  Places the vertices uniformly on a circle in arbitrary order.</a></span></dt>
 <dt><span class="section"><a href="igraph-Layout.html#igraph_layout_star">1.3. <code class="function">igraph_layout_star</code> —  Generates a star-like layout.</a></span></dt>
 <dt><span class="section"><a href="igraph-Layout.html#igraph_layout_grid">1.4. <code class="function">igraph_layout_grid</code> —  Places the vertices on a regular grid on the plane.</a></span></dt>
@@ -53,7 +53,7 @@ and return an <span class="type">igraph_matrix_t</span>, in which each row gives
 coordinates of a vertex.</p>
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
-<a name="igraph_layout_random"></a>1.1. <code class="function">igraph_layout_random</code> —  Places the vertices uniform randomly on a plane.</h3></div></div></div>
+<a name="igraph_layout_random"></a>1.1. <code class="function">igraph_layout_random</code> —  Places the vertices uniformly randomly within a square.</h3></div></div></div>
 <a class="indexterm" name="id-1.21.2.4.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
@@ -65,6 +65,9 @@ igraph_error_t igraph_layout_random(const igraph_t *graph, igraph_matrix_t *res)
 
 
 
+
+Vertex coordinates range from -1 to 1, and are placed in two columns
+of a matrix, with a row for each vertex.
 
 </p>
 <p><b>Arguments: </b>
@@ -101,15 +104,13 @@ igraph_error_t igraph_layout_random(const igraph_t *graph, igraph_matrix_t *res)
 <tbody><tr>
 <td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
 <td><p>
-  Error code. The current implementation always returns with
-success.
+  Error code.
   </p></td>
 </tr></tbody>
 </table></div>
 <p>
 
-Time complexity: O(|V|), the
-number of vertices.
+Time complexity: O(|V|), the number of vertices.
  
 </p>
 </div>
@@ -2907,7 +2908,7 @@ UMAP: Uniform Manifold Approximation and Projection for Dimension Reduction (202
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
 <a name="three-d-layout-generators"></a>3. 3D layout generators</h2></div></div></div>
 <div class="toc"><dl class="toc">
-<dt><span class="section"><a href="igraph-Layout.html#igraph_layout_random_3d">3.1. <code class="function">igraph_layout_random_3d</code> —  Places the vertices uniform randomly in a cube.</a></span></dt>
+<dt><span class="section"><a href="igraph-Layout.html#igraph_layout_random_3d">3.1. <code class="function">igraph_layout_random_3d</code> —  Places the vertices uniformly randomly in a cube.</a></span></dt>
 <dt><span class="section"><a href="igraph-Layout.html#igraph_layout_sphere">3.2. <code class="function">igraph_layout_sphere</code> —  Places vertices (more or less) uniformly on a sphere.</a></span></dt>
 <dt><span class="section"><a href="igraph-Layout.html#igraph_layout_grid_3d">3.3. <code class="function">igraph_layout_grid_3d</code> —  Places the vertices on a regular grid in the 3D space.</a></span></dt>
 <dt><span class="section"><a href="igraph-Layout.html#igraph_layout_fruchterman_reingold_3d">3.4. <code class="function">igraph_layout_fruchterman_reingold_3d</code> —  3D Fruchterman-Reingold algorithm.</a></span></dt>
@@ -2916,7 +2917,7 @@ UMAP: Uniform Manifold Approximation and Projection for Dimension Reduction (202
 </dl></div>
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
-<a name="igraph_layout_random_3d"></a>3.1. <code class="function">igraph_layout_random_3d</code> —  Places the vertices uniform randomly in a cube.</h3></div></div></div>
+<a name="igraph_layout_random_3d"></a>3.1. <code class="function">igraph_layout_random_3d</code> —  Places the vertices uniformly randomly in a cube.</h3></div></div></div>
 <a class="indexterm" name="id-1.21.4.2.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
@@ -2928,9 +2929,7 @@ igraph_error_t igraph_layout_random_3d(const igraph_t *graph, igraph_matrix_t *r
 
 
 
-</p>
-<p>
-Vertex coordinates range from -1 to 1, and are placed in 3 columns
+Vertex coordinates range from -1 to 1, and are placed in three columns
 of a matrix, with a row for each vertex.
 
 </p>
@@ -2968,8 +2967,7 @@ resized to hold the result.
 <tbody><tr>
 <td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
 <td><p>
-  Error code. The current implementation always returns with
-success.
+  Error code.
   </p></td>
 </tr></tbody>
 </table></div>
