--- a/c/html/master/igraph-Nongraph.html
+++ b/c/html/master/igraph-Nongraph.html
@@ -29,6 +29,7 @@ langversion: master
 <dt><span class="section"><a href="igraph-Nongraph.html#convex-hull-of-a-set-of-points-on-a-plane">5. Convex hull of a set of points on a plane</a></span></dt>
 <dt><span class="section"><a href="igraph-Nongraph.html#fitting-powerlaw-distributions-to-empirical-data">6. Fitting power-law distributions to empirical data</a></span></dt>
 <dt><span class="section"><a href="igraph-Nongraph.html#compare-floats-with-tolerance">7. Comparing floats with a tolerance</a></span></dt>
+<dt><span class="section"><a href="igraph-Nongraph.html#deprecated">8. Deprecated functions</a></span></dt>
 </dl></div>
 <div class="section">
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
@@ -636,14 +637,14 @@ latent vectors.
 <div class="section">
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
 <a name="convex-hull-of-a-set-of-points-on-a-plane"></a>5. Convex hull of a set of points on a plane</h2></div></div></div>
-<div class="toc"><dl class="toc"><dt><span class="section"><a href="igraph-Nongraph.html#igraph_convex_hull">5.1. <code class="function">igraph_convex_hull</code> —  Determines the convex hull of a given set of points in the 2D plane.</a></span></dt></dl></div>
+<div class="toc"><dl class="toc"><dt><span class="section"><a href="igraph-Nongraph.html#igraph_convex_hull_2d">5.1. <code class="function">igraph_convex_hull_2d</code> —  Determines the convex hull of a given set of points in the 2D plane.</a></span></dt></dl></div>
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
-<a name="igraph_convex_hull"></a>5.1. <code class="function">igraph_convex_hull</code> —  Determines the convex hull of a given set of points in the 2D plane.</h3></div></div></div>
+<a name="igraph_convex_hull_2d"></a>5.1. <code class="function">igraph_convex_hull_2d</code> —  Determines the convex hull of a given set of points in the 2D plane.</h3></div></div></div>
 <a class="indexterm" name="id-1.33.6.2.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
-igraph_error_t igraph_convex_hull(
+igraph_error_t igraph_convex_hull_2d(
     const igraph_matrix_t *data, igraph_vector_int_t *resverts,
     igraph_matrix_t *rescoords
 );
@@ -977,7 +978,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
     <span class="emphasis"><em>/* Get the vertex degrees. We use igraph_strength() because it stores its</em></span>
 <span class="emphasis"><em>     * result in an igraph_vector_t */</em></span>
     <span class="strong"><strong><a class="link" href="igraph-Data-structures.html#igraph_vector_init" title="2.2.1. igraph_vector_init — Initializes a vector object (constructor).">igraph_vector_init</a></strong></span>(&amp;degree, 0);
-    <span class="strong"><strong><a class="link" href="igraph-Structural.html#igraph_strength" title="10.11. igraph_strength — Strength of the vertices, also called weighted vertex degree.">igraph_strength</a></strong></span>(&amp;g, &amp;degree, <span class="strong"><strong><a class="link" href="igraph-Iterators.html#igraph_vss_all" title="4.1. igraph_vss_all — All vertices of a graph (immediate version).">igraph_vss_all</a></strong></span>(), IGRAPH_ALL, IGRAPH_NO_LOOPS, 0);
+    <span class="strong"><strong><a class="link" href="igraph-Structural.html#igraph_strength" title="11.11. igraph_strength — Strength of the vertices, also called weighted vertex degree.">igraph_strength</a></strong></span>(&amp;g, &amp;degree, <span class="strong"><strong><a class="link" href="igraph-Iterators.html#igraph_vss_all" title="4.1. igraph_vss_all — All vertices of a graph (immediate version).">igraph_vss_all</a></strong></span>(), IGRAPH_ALL, IGRAPH_NO_LOOPS, 0);
 
     <span class="emphasis"><em>/* Fit a power-law to the degrees */</em></span>
     <span class="strong"><strong><a class="link" href="igraph-Nongraph.html#igraph_power_law_fit" title="6.2. igraph_power_law_fit — Fits a power-law distribution to a vector of numbers.">igraph_power_law_fit</a></strong></span>(
@@ -1334,6 +1335,98 @@ to each other with a given level of tolerance on the relative error.
 </tr></tbody>
 </table></div>
 <p>
+ 
+</p>
+</div>
+</div>
+<div class="section">
+<div class="titlepage"><div><div><h2 class="title" style="clear: both">
+<a name="deprecated"></a>8. Deprecated functions</h2></div></div></div>
+<div class="toc"><dl class="toc"><dt><span class="section"><a href="igraph-Nongraph.html#igraph_convex_hull">8.1. <code class="function">igraph_convex_hull</code> —  Determines the convex hull of a given set of points in the 2D plane (deprecated alias)</a></span></dt></dl></div>
+<div class="section">
+<div class="titlepage"><div><div><h3 class="title">
+<a name="igraph_convex_hull"></a>8.1. <code class="function">igraph_convex_hull</code> —  Determines the convex hull of a given set of points in the 2D plane (deprecated alias)</h3></div></div></div>
+<a class="indexterm" name="id-1.33.9.2.2"></a><p>
+</p>
+<div class="informalexample"><pre class="programlisting">
+igraph_error_t igraph_convex_hull(
+        const igraph_matrix_t *data, igraph_vector_int_t *resverts,
+        igraph_matrix_t *rescoords
+);
+</pre></div>
+<p>
+</p>
+<p>
+
+
+
+
+</p>
+<p>
+The convex hull is determined by the Graham scan algorithm.
+See the following reference for details:
+
+</p>
+<p>
+Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest, and Clifford
+Stein. Introduction to Algorithms, Second Edition. MIT Press and
+McGraw-Hill, 2001. ISBN 0262032937. Pages 949-955 of section 33.3:
+Finding the convex hull.
+
+</p>
+<p><b>Arguments: </b>
+</p>
+<div class="variablelist"><table border="0" class="variablelist">
+<colgroup>
+<col align="left" valign="top">
+<col>
+</colgroup>
+<tbody>
+<tr>
+<td><p><span class="term"><em class="parameter"><code>data</code></em>:</span></p></td>
+<td><p>
+  vector containing the coordinates. The length of the
+       vector must be even, since it contains X-Y coordinate pairs.
+</p></td>
+</tr>
+<tr>
+<td><p><span class="term"><em class="parameter"><code>resverts</code></em>:</span></p></td>
+<td><p>
+  the vector containing the result, e.g. the vector of
+       vertex indices used as the corners of the convex hull. Supply
+       <code class="constant">NULL</code> here if you are only interested in the coordinates of
+       the convex hull corners.
+</p></td>
+</tr>
+<tr>
+<td><p><span class="term"><em class="parameter"><code>rescoords</code></em>:</span></p></td>
+<td><p>
+  the matrix containing the coordinates of the selected
+       corner vertices. Supply <code class="constant">NULL</code> here if you are only interested in
+       the vertex indices.
+</p></td>
+</tr>
+</tbody>
+</table></div>
+<p>
+</p>
+<p><b>Returns: </b></p>
+<div class="variablelist"><table border="0" class="variablelist">
+<colgroup>
+<col align="left" valign="top">
+<col>
+</colgroup>
+<tbody><tr>
+<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
+<td><p>
+  Error code:
+        <code class="constant">IGRAPH_ENOMEM</code>: not enough memory
+  </p></td>
+</tr></tbody>
+</table></div>
+<p>
+
+Time complexity: O(n log(n)) where n is the number of vertices.
  
 </p>
 </div>
