--- a/c/html/develop/igraph-Advanced.html
+++ b/c/html/develop/igraph-Advanced.html
@@ -10,17 +10,17 @@ langversion: develop
 
 {% raw %}
 <div class="navigation-header mb-4" width="100%" summary="Navigation header"><div class="btn-group">
-<a accesskey="p" class="btn btn-light" href="igraph-Bipartite.html"><i class="fa fa-chevron-left"></i>
+<a accesskey="p" class="btn btn-light" href="igraph-Nongraph.html"><i class="fa fa-chevron-left"></i>
               Previous
             </a><a accesskey="h" class="btn btn-light" href="index.html"><i class="fa fa-home"></i>
               Home
-            </a><a accesskey="n" class="btn btn-light" href="igraph-Nongraph.html"><i class="fa fa-chevron-right"></i>
+            </a><a accesskey="n" class="btn btn-light" href="igraph-Glossary.html"><i class="fa fa-chevron-right"></i>
               Next
             </a>
 </div></div>
 <div class="chapter">
 <div class="titlepage"><div><div><h1 class="title">
-<a name="igraph-Advanced"></a>Chapter 31. Advanced igraph programming</h1></div></div></div>
+<a name="igraph-Advanced"></a>Chapter 34. Advanced igraph programming</h1></div></div></div>
 <div class="toc"><dl class="toc">
 <dt><span class="section"><a href="igraph-Advanced.html#using-igraph-in-multi-threaded-programs">1. Using igraph in multi-threaded programs</a></span></dt>
 <dt><span class="section"><a href="igraph-Advanced.html#igraph-Progress">2. Progress handlers</a></span></dt>
@@ -49,7 +49,7 @@ langversion: develop
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
 <a name="IGRAPH_THREAD_SAFE"></a>1.1. <code class="function">IGRAPH_THREAD_SAFE</code> — Specifies whether igraph was built in thread-safe mode.</h3></div></div></div>
-<a class="indexterm" name="id-1.32.2.3.2"></a><p>
+<a class="indexterm" name="id-1.35.2.3.2"></a><p>
 </p>
 <pre class="programlisting">
 #define IGRAPH_THREAD_SAFE 
@@ -133,7 +133,7 @@ pre-defined progress handler, called <a class="link" href="igraph-Advanced.html#
 <div class="section">
 <div class="titlepage"><div><div><h4 class="title">
 <a name="igraph_progress_handler_t"></a>2.2.1. <code class="function">igraph_progress_handler_t</code> —  Type of progress handler functions</h4></div></div></div>
-<a class="indexterm" name="id-1.32.3.3.2.2"></a><pre class="programlisting">
+<a class="indexterm" name="id-1.35.3.3.2.2"></a><pre class="programlisting">
 typedef igraph_error_t igraph_progress_handler_t(const char *message, igraph_real_t percent,
                                       void *data);
 </pre>
@@ -205,7 +205,7 @@ write and set up more sophisticated ones.
 <div class="section">
 <div class="titlepage"><div><div><h4 class="title">
 <a name="igraph_set_progress_handler"></a>2.2.2. <code class="function">igraph_set_progress_handler</code> —  Install a progress handler, or remove the current handler.</h4></div></div></div>
-<a class="indexterm" name="id-1.32.3.3.3.2"></a><p>
+<a class="indexterm" name="id-1.35.3.3.3.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_progress_handler_t *
@@ -261,7 +261,7 @@ Time complexity: O(1).
 <div class="section">
 <div class="titlepage"><div><div><h4 class="title">
 <a name="igraph_progress_handler_stderr"></a>2.2.3. <code class="function">igraph_progress_handler_stderr</code> —  A simple predefined progress handler.</h4></div></div></div>
-<a class="indexterm" name="id-1.32.3.3.4.2"></a><p>
+<a class="indexterm" name="id-1.35.3.3.4.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_progress_handler_stderr(const char *message, igraph_real_t percent,
@@ -345,7 +345,7 @@ Time complexity: O(1).
 <div class="section">
 <div class="titlepage"><div><div><h4 class="title">
 <a name="IGRAPH_PROGRESS"></a>2.3.1. <code class="function">IGRAPH_PROGRESS</code> —  Report the progress of a calculation from an igraph function (macro variant).</h4></div></div></div>
-<a class="indexterm" name="id-1.32.3.4.2.2"></a><p>
+<a class="indexterm" name="id-1.35.3.4.2.2"></a><p>
 </p>
 <pre class="programlisting">
 #define IGRAPH_PROGRESS(message, percent, data)
@@ -412,7 +412,7 @@ The standard way to report progress from an igraph function
 <div class="section">
 <div class="titlepage"><div><div><h4 class="title">
 <a name="IGRAPH_PROGRESSF"></a>2.3.2. <code class="function">IGRAPH_PROGRESSF</code> —  Report the progress of a calculation from an igraph function, printf-like (macro variant).</h4></div></div></div>
-<a class="indexterm" name="id-1.32.3.4.3.2"></a><p>
+<a class="indexterm" name="id-1.35.3.4.3.2"></a><p>
 </p>
 <pre class="programlisting">
 #define IGRAPH_PROGRESSF(args)
@@ -468,7 +468,7 @@ called with the given arguments.
 <div class="section">
 <div class="titlepage"><div><div><h4 class="title">
 <a name="igraph_progress"></a>2.3.3. <code class="function">igraph_progress</code> —  Report the progress of a calculation from an igraph function.</h4></div></div></div>
-<a class="indexterm" name="id-1.32.3.4.4.2"></a><p>
+<a class="indexterm" name="id-1.35.3.4.4.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_progress(const char *message, igraph_real_t percent, void *data);
@@ -543,7 +543,7 @@ Time complexity: O(1).
 <div class="section">
 <div class="titlepage"><div><div><h4 class="title">
 <a name="igraph_progressf"></a>2.3.4. <code class="function">igraph_progressf</code> —  Report the progress of a calculation from an igraph function, printf-like.</h4></div></div></div>
-<a class="indexterm" name="id-1.32.3.4.5.2"></a><p>
+<a class="indexterm" name="id-1.35.3.4.5.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_progressf(const char *message, igraph_real_t percent, void *data,
@@ -722,7 +722,7 @@ igraph functions report their status via a call to the
 <div class="section">
 <div class="titlepage"><div><div><h4 class="title">
 <a name="igraph_status_handler_t"></a>3.2.1. <code class="function">igraph_status_handler_t</code> — The type of the igraph status handler functions</h4></div></div></div>
-<a class="indexterm" name="id-1.32.4.3.2.2"></a><pre class="programlisting">
+<a class="indexterm" name="id-1.35.4.3.2.2"></a><pre class="programlisting">
 typedef igraph_error_t igraph_status_handler_t(const char *message, void *data);
 </pre>
 <p>
@@ -774,7 +774,7 @@ typedef igraph_error_t igraph_status_handler_t(const char *message, void *data);
 <div class="section">
 <div class="titlepage"><div><div><h4 class="title">
 <a name="igraph_set_status_handler"></a>3.2.2. <code class="function">igraph_set_status_handler</code> — Install of uninstall a status handler function.</h4></div></div></div>
-<a class="indexterm" name="id-1.32.4.3.3.2"></a><p>
+<a class="indexterm" name="id-1.35.4.3.3.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_status_handler_t *
@@ -827,7 +827,7 @@ Time complexity: O(1).
 <div class="section">
 <div class="titlepage"><div><div><h4 class="title">
 <a name="igraph_status_handler_stderr"></a>3.2.3. <code class="function">igraph_status_handler_stderr</code> — A simple predefined status handler function.</h4></div></div></div>
-<a class="indexterm" name="id-1.32.4.3.4.2"></a><p>
+<a class="indexterm" name="id-1.35.4.3.4.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_status_handler_stderr(const char *message, void *data);
@@ -899,7 +899,7 @@ Time complexity: O(1).
 <div class="section">
 <div class="titlepage"><div><div><h4 class="title">
 <a name="IGRAPH_STATUS"></a>3.3.1. <code class="function">IGRAPH_STATUS</code> — Report the status of an igraph function.</h4></div></div></div>
-<a class="indexterm" name="id-1.32.4.4.2.2"></a><p>
+<a class="indexterm" name="id-1.35.4.4.2.2"></a><p>
 </p>
 <pre class="programlisting">
 #define IGRAPH_STATUS(message, data)
@@ -962,7 +962,7 @@ signal the three major steps.
 <div class="section">
 <div class="titlepage"><div><div><h4 class="title">
 <a name="IGRAPH_STATUSF"></a>3.3.2. <code class="function">IGRAPH_STATUSF</code> — Report the status from an igraph function</h4></div></div></div>
-<a class="indexterm" name="id-1.32.4.4.3.2"></a><p>
+<a class="indexterm" name="id-1.35.4.4.3.2"></a><p>
 </p>
 <pre class="programlisting">
 #define IGRAPH_STATUSF(args)
@@ -1018,7 +1018,7 @@ called with the given arguments.
 <div class="section">
 <div class="titlepage"><div><div><h4 class="title">
 <a name="igraph_status"></a>3.3.3. <code class="function">igraph_status</code> —  Reports status from an igraph function.</h4></div></div></div>
-<a class="indexterm" name="id-1.32.4.4.4.2"></a><p>
+<a class="indexterm" name="id-1.35.4.4.4.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_status(const char *message, void *data);
@@ -1085,7 +1085,7 @@ Time complexity: O(1).
 <div class="section">
 <div class="titlepage"><div><div><h4 class="title">
 <a name="igraph_statusf"></a>3.3.4. <code class="function">igraph_statusf</code> —  Report status, more flexible printf-like version.</h4></div></div></div>
-<a class="indexterm" name="id-1.32.4.4.5.2"></a><p>
+<a class="indexterm" name="id-1.35.4.4.5.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_statusf(const char *message, void *data, ...);
@@ -1157,7 +1157,7 @@ It substitutes the values of the additional arguments into the
 </div>
 </div>
 <table class="navigation-footer" width="100%" summary="Navigation footer" cellpadding="2" cellspacing="0"><tr valign="middle">
-<td align="left"><a accesskey="p" href="igraph-Bipartite.html"><b>← Chapter 30. Bipartite, i.e. two-mode graphs</b></a></td>
-<td align="right"><a accesskey="n" href="igraph-Nongraph.html"><b>Chapter 32. Non-graph related functions  →</b></a></td>
+<td align="left"><a accesskey="p" href="igraph-Nongraph.html"><b>← Chapter 33. Non-graph related functions </b></a></td>
+<td align="right"><a accesskey="n" href="igraph-Glossary.html"><b>Chapter 35. Glossary →</b></a></td>
 </tr></table>
 {% endraw %}
