--- a/c/html/develop/igraph-Embedding.html
+++ b/c/html/develop/igraph-Embedding.html
@@ -14,13 +14,13 @@ langversion: develop
               Previous
             </a><a accesskey="h" class="btn btn-light" href="index.html"><i class="fa fa-home"></i>
               Home
-            </a><a accesskey="n" class="btn btn-light" href="igraph-Operators.html"><i class="fa fa-chevron-right"></i>
+            </a><a accesskey="n" class="btn btn-light" href="igraph-Layout.html"><i class="fa fa-chevron-right"></i>
               Next
             </a>
 </div></div>
 <div class="chapter">
 <div class="titlepage"><div><div><h1 class="title">
-<a name="igraph-Embedding"></a>Chapter 27. Embedding of graphs</h1></div></div></div>
+<a name="igraph-Embedding"></a>Chapter 28. Embedding of graphs</h1></div></div></div>
 <div class="toc"><dl class="toc"><dt><span class="section"><a href="igraph-Embedding.html#spectral-embedding">1. Spectral embedding</a></span></dt></dl></div>
 <div class="section">
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
@@ -33,11 +33,11 @@ langversion: develop
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
 <a name="igraph_adjacency_spectral_embedding"></a>1.1. <code class="function">igraph_adjacency_spectral_embedding</code> — Adjacency spectral embedding</h3></div></div></div>
-<a class="indexterm" name="id-1.28.2.2.2"></a><p>
+<a class="indexterm" name="id-1.29.2.2.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_adjacency_spectral_embedding(const igraph_t *graph,
-                                        igraph_integer_t n,
+                                        igraph_int_t n,
                                         const igraph_vector_t *weights,
                                         igraph_eigen_which_position_t which,
                                         igraph_bool_t scaled,
@@ -193,7 +193,7 @@ X = U^n D^(1/2), Y = V^n D^(1/2).
 <tr>
 <td><p><span class="term"><em class="parameter"><code>options</code></em>:</span></p></td>
 <td><p>
-  Options to ARPACK. See <a class="link" href="igraph-Arpack.html#igraph_arpack_options_t" title="3.1.1. igraph_arpack_options_t — Options for ARPACK."><code class="function">igraph_arpack_options_t</code></a>
+  Options to ARPACK. See <a class="link" href="igraph-Linalg.html#igraph_arpack_options_t" title="3.1.1. igraph_arpack_options_t — Options for ARPACK."><code class="function">igraph_arpack_options_t</code></a>
        for details. Supply <code class="constant">NULL</code> to use the defaults. Note that the
        function overwrites the <code class="literal">n</code> (number of vertices),
        <code class="literal">nev</code> and <code class="literal">which</code> parameters and it always
@@ -225,11 +225,11 @@ X = U^n D^(1/2), Y = V^n D^(1/2).
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
 <a name="igraph_laplacian_spectral_embedding"></a>1.2. <code class="function">igraph_laplacian_spectral_embedding</code> — Spectral embedding of the Laplacian of a graph</h3></div></div></div>
-<a class="indexterm" name="id-1.28.2.3.2"></a><p>
+<a class="indexterm" name="id-1.29.2.3.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_laplacian_spectral_embedding(const igraph_t *graph,
-                                        igraph_integer_t n,
+                                        igraph_int_t n,
                                         const igraph_vector_t *weights,
                                         igraph_eigen_which_position_t which,
                                         igraph_laplacian_spectral_embedding_type_t type,
@@ -403,7 +403,7 @@ of the graph, instead of the adjacency matrix.
 <tr>
 <td><p><span class="term"><em class="parameter"><code>options</code></em>:</span></p></td>
 <td><p>
-  Options to ARPACK. See <a class="link" href="igraph-Arpack.html#igraph_arpack_options_t" title="3.1.1. igraph_arpack_options_t — Options for ARPACK."><code class="function">igraph_arpack_options_t</code></a>
+  Options to ARPACK. See <a class="link" href="igraph-Linalg.html#igraph_arpack_options_t" title="3.1.1. igraph_arpack_options_t — Options for ARPACK."><code class="function">igraph_arpack_options_t</code></a>
        for details. Supply <code class="constant">NULL</code> to use the defaults. Note that the
        function overwrites the <code class="literal">n</code> (number of vertices),
        <code class="literal">nev</code> and <code class="literal">which</code> parameters and it always
@@ -451,10 +451,10 @@ matrix.
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
 <a name="igraph_dim_select"></a>1.3. <code class="function">igraph_dim_select</code> —  Dimensionality selection.</h3></div></div></div>
-<a class="indexterm" name="id-1.28.2.4.2"></a><p>
+<a class="indexterm" name="id-1.29.2.4.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
-igraph_error_t igraph_dim_select(const igraph_vector_t *sv, igraph_integer_t *dim);
+igraph_error_t igraph_dim_select(const igraph_vector_t *sv, igraph_int_t *dim);
 </pre></div>
 <p>
 </p>
@@ -550,7 +550,7 @@ Time complexity: O(n), n is the number of values in sv.
 </div>
 </div>
 <table class="navigation-footer" width="100%" summary="Navigation footer" cellpadding="2" cellspacing="0"><tr valign="middle">
-<td align="left"><a accesskey="p" href="igraph-HRG.html"><b>← Chapter 26. Hierarchical random graphs</b></a></td>
-<td align="right"><a accesskey="n" href="igraph-Operators.html"><b>Chapter 28. Graph operators →</b></a></td>
+<td align="left"><a accesskey="p" href="igraph-HRG.html"><b>← Chapter 27. Hierarchical random graphs</b></a></td>
+<td align="right"><a accesskey="n" href="igraph-Layout.html"><b>Chapter 29. Generating layouts for graph drawing →</b></a></td>
 </tr></table>
 {% endraw %}
