--- a/c/html/develop/igraph-HRG.html
+++ b/c/html/develop/igraph-HRG.html
@@ -20,7 +20,7 @@ langversion: develop
 </div></div>
 <div class="chapter">
 <div class="titlepage"><div><div><h1 class="title">
-<a name="igraph-HRG"></a>Chapter 26. Hierarchical random graphs</h1></div></div></div>
+<a name="igraph-HRG"></a>Chapter 27. Hierarchical random graphs</h1></div></div></div>
 <div class="toc"><dl class="toc">
 <dt><span class="section"><a href="igraph-HRG.html#hrg-intro">1.  Introduction</a></span></dt>
 <dt><span class="section"><a href="igraph-HRG.html#representing-hrgs">2. Representing HRGs</a></span></dt>
@@ -74,7 +74,7 @@ published by Aaron Clauset, at his website,
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
 <a name="igraph_hrg_t"></a>2.1. <code class="function">igraph_hrg_t</code> —  Data structure to store a hierarchical random graph.</h3></div></div></div>
-<a class="indexterm" name="id-1.27.3.2.2"></a><p>
+<a class="indexterm" name="id-1.28.3.2.2"></a><p>
 </p>
 <pre class="programlisting">
 typedef struct igraph_hrg_t {
@@ -159,10 +159,10 @@ It has the following members:
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
 <a name="igraph_hrg_init"></a>2.2. <code class="function">igraph_hrg_init</code> —  Allocate memory for a HRG.</h3></div></div></div>
-<a class="indexterm" name="id-1.27.3.3.2"></a><p>
+<a class="indexterm" name="id-1.28.3.3.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
-igraph_error_t igraph_hrg_init(igraph_hrg_t *hrg, igraph_integer_t n);
+igraph_error_t igraph_hrg_init(igraph_hrg_t *hrg, igraph_int_t n);
 </pre></div>
 <p>
 </p>
@@ -221,7 +221,7 @@ Time complexity: O(n), the number of vertices in the graph.
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
 <a name="igraph_hrg_destroy"></a>2.3. <code class="function">igraph_hrg_destroy</code> —  Deallocate memory for an HRG.</h3></div></div></div>
-<a class="indexterm" name="id-1.27.3.4.2"></a><p>
+<a class="indexterm" name="id-1.28.3.4.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 void igraph_hrg_destroy(igraph_hrg_t *hrg);
@@ -258,10 +258,10 @@ Time complexity: operating system dependent.
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
 <a name="igraph_hrg_size"></a>2.4. <code class="function">igraph_hrg_size</code> —  Returns the size of the HRG, the number of leaf nodes.</h3></div></div></div>
-<a class="indexterm" name="id-1.27.3.5.2"></a><p>
+<a class="indexterm" name="id-1.28.3.5.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
-igraph_integer_t igraph_hrg_size(const igraph_hrg_t *hrg);
+igraph_int_t igraph_hrg_size(const igraph_hrg_t *hrg);
 </pre></div>
 <p>
 </p>
@@ -308,10 +308,10 @@ Time complexity: O(1).
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
 <a name="igraph_hrg_resize"></a>2.5. <code class="function">igraph_hrg_resize</code> —  Resize a HRG.</h3></div></div></div>
-<a class="indexterm" name="id-1.27.3.6.2"></a><p>
+<a class="indexterm" name="id-1.28.3.6.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
-igraph_error_t igraph_hrg_resize(igraph_hrg_t *hrg, igraph_integer_t newsize);
+igraph_error_t igraph_hrg_resize(igraph_hrg_t *hrg, igraph_int_t newsize);
 </pre></div>
 <p>
 </p>
@@ -375,13 +375,13 @@ Time complexity: O(n), n is the new size.
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
 <a name="igraph_hrg_fit"></a>3.1. <code class="function">igraph_hrg_fit</code> —  Fit a hierarchical random graph model to a network.</h3></div></div></div>
-<a class="indexterm" name="id-1.27.4.2.2"></a><p>
+<a class="indexterm" name="id-1.28.4.2.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_hrg_fit(const igraph_t *graph,
                    igraph_hrg_t *hrg,
                    igraph_bool_t start,
-                   igraph_integer_t steps);
+                   igraph_int_t steps);
 </pre></div>
 <p>
 </p>
@@ -455,7 +455,7 @@ Time complexity: TODO.
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
 <a name="igraph_hrg_consensus"></a>3.2. <code class="function">igraph_hrg_consensus</code> —  Calculate a consensus tree for a HRG.</h3></div></div></div>
-<a class="indexterm" name="id-1.27.4.3.2"></a><p>
+<a class="indexterm" name="id-1.28.4.3.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_hrg_consensus(const igraph_t *graph,
@@ -463,7 +463,7 @@ igraph_error_t igraph_hrg_consensus(const igraph_t *graph,
                          igraph_vector_t *weights,
                          igraph_hrg_t *hrg,
                          igraph_bool_t start,
-                         igraph_integer_t num_samples);
+                         igraph_int_t num_samples);
 </pre></div>
 <p>
 </p>
@@ -563,7 +563,7 @@ Time complexity: TODO.
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
 <a name="igraph_hrg_sample"></a>4.1. <code class="function">igraph_hrg_sample</code> —  Sample from a hierarchical random graph model.</h3></div></div></div>
-<a class="indexterm" name="id-1.27.5.2.2"></a><p>
+<a class="indexterm" name="id-1.28.5.2.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_hrg_sample(const igraph_hrg_t *hrg, igraph_t *sample);
@@ -623,7 +623,7 @@ Time complexity: TODO.
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
 <a name="igraph_hrg_game"></a>4.2. <code class="function">igraph_hrg_game</code> —  Generate a hierarchical random graph.</h3></div></div></div>
-<a class="indexterm" name="id-1.27.5.3.2"></a><p>
+<a class="indexterm" name="id-1.28.5.3.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_hrg_game(igraph_t *graph,
@@ -694,7 +694,7 @@ Time complexity: TODO.
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
 <a name="igraph_from_hrg_dendrogram"></a>5.1. <code class="function">igraph_from_hrg_dendrogram</code> —  Create a graph representation of the dendrogram of a hierarchical random graph model.</h3></div></div></div>
-<a class="indexterm" name="id-1.27.6.2.2"></a><p>
+<a class="indexterm" name="id-1.28.6.2.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_from_hrg_dendrogram(
@@ -769,7 +769,7 @@ Time complexity: O(n), the number of vertices in the graph.
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
 <a name="igraph_hrg_create"></a>5.2. <code class="function">igraph_hrg_create</code> —  Create a HRG from an igraph graph.</h3></div></div></div>
-<a class="indexterm" name="id-1.27.6.3.2"></a><p>
+<a class="indexterm" name="id-1.28.6.3.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_hrg_create(igraph_hrg_t *hrg,
@@ -844,7 +844,7 @@ Time complexity: O(n), the number of vertices in the tree.
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
 <a name="igraph_hrg_predict"></a>6.1. <code class="function">igraph_hrg_predict</code> —  Predict missing edges in a graph, based on HRG models.</h3></div></div></div>
-<a class="indexterm" name="id-1.27.7.2.2"></a><p>
+<a class="indexterm" name="id-1.28.7.2.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_hrg_predict(const igraph_t *graph,
@@ -852,8 +852,8 @@ igraph_error_t igraph_hrg_predict(const igraph_t *graph,
                        igraph_vector_t *prob,
                        igraph_hrg_t *hrg,
                        igraph_bool_t start,
-                       igraph_integer_t num_samples,
-                       igraph_integer_t num_bins);
+                       igraph_int_t num_samples,
+                       igraph_int_t num_bins);
 </pre></div>
 <p>
 </p>
@@ -951,7 +951,7 @@ Time complexity: TODO.
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
 <a name="igraph_hrg_dendrogram"></a>7.1. <code class="function">igraph_hrg_dendrogram</code> —  Create a dendrogram from a hierarchical random graph.</h3></div></div></div>
-<a class="indexterm" name="id-1.27.8.2.2"></a><p>
+<a class="indexterm" name="id-1.28.8.2.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_hrg_dendrogram(igraph_t *graph, const igraph_hrg_t *hrg);
@@ -1021,7 +1021,7 @@ instead.</p>
 </div>
 </div>
 <table class="navigation-footer" width="100%" summary="Navigation footer" cellpadding="2" cellspacing="0"><tr valign="middle">
-<td align="left"><a accesskey="p" href="igraph-Graphlets.html"><b>← Chapter 25. Graphlets</b></a></td>
-<td align="right"><a accesskey="n" href="igraph-Embedding.html"><b>Chapter 27. Embedding of graphs →</b></a></td>
+<td align="left"><a accesskey="p" href="igraph-Graphlets.html"><b>← Chapter 26. Graphlets</b></a></td>
+<td align="right"><a accesskey="n" href="igraph-Embedding.html"><b>Chapter 28. Embedding of graphs →</b></a></td>
 </tr></table>
 {% endraw %}
