--- a/c/html/develop/igraph-Random.html
+++ b/c/html/develop/igraph-Random.html
@@ -14,7 +14,7 @@ langversion: develop
               Previous
             </a><a accesskey="h" class="btn btn-light" href="index.html"><i class="fa fa-home"></i>
               Home
-            </a><a accesskey="n" class="btn btn-light" href="igraph-Generators.html"><i class="fa fa-chevron-right"></i>
+            </a><a accesskey="n" class="btn btn-light" href="igraph-Iterators.html"><i class="fa fa-chevron-right"></i>
               Next
             </a>
 </div></div>
@@ -329,7 +329,7 @@ RNG.
 <a class="indexterm" name="id-1.9.4.5.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
-igraph_integer_t igraph_rng_bits(const igraph_rng_t* rng);
+igraph_int_t igraph_rng_bits(const igraph_rng_t* rng);
 </pre></div>
 <p>
 </p>
@@ -556,8 +556,8 @@ is needed at a time. It is not efficient for generating multiple bits.
 <a class="indexterm" name="id-1.9.5.3.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
-igraph_integer_t igraph_rng_get_integer(
-    igraph_rng_t *rng, igraph_integer_t l, igraph_integer_t h
+igraph_int_t igraph_rng_get_integer(
+    igraph_rng_t *rng, igraph_int_t l, igraph_int_t h
 );
 </pre></div>
 <p>
@@ -962,7 +962,7 @@ Time complexity: depends on the RNG.
 <a class="indexterm" name="id-1.9.5.9.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
-igraph_real_t igraph_rng_get_binom(igraph_rng_t *rng, igraph_integer_t n, igraph_real_t p);
+igraph_real_t igraph_rng_get_binom(igraph_rng_t *rng, igraph_int_t n, igraph_real_t p);
 </pre></div>
 <p>
 </p>
@@ -1437,26 +1437,27 @@ use. If you want to replace that, then please use <a class="link" href="igraph-R
 <pre class="programlisting"><span class="strong"><strong>#include</strong></span> &lt;igraph.h&gt;
 
 int <span class="strong"><strong>main</strong></span>(void) {
-
     igraph_t g1, g2;
     igraph_bool_t iso;
 
-    <span class="emphasis"><em>/* Seed the default random number generator and create a random graph. */</em></span>
+    <span class="emphasis"><em>/* Initialize the library. */</em></span>
+    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_setup" title="4.1. igraph_setup — Initializes the igraph library.">igraph_setup</a></strong></span>();
 
+    <span class="emphasis"><em>/* Seed the default random number generator and create a random graph. */</em></span>
     <span class="strong"><strong><a class="link" href="igraph-Random.html#igraph_rng_seed" title="3.3. igraph_rng_seed — Seeds a random number generator.">igraph_rng_seed</a></strong></span>(<span class="strong"><strong><a class="link" href="igraph-Random.html#igraph_rng_default" title="2.1. igraph_rng_default — Query the default random number generator.">igraph_rng_default</a></strong></span>(), 1122);
 
-    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_erdos_renyi_game_gnp" title="2.4. igraph_erdos_renyi_game_gnp — Generates a random (Erdős-Rényi) graph with fixed edge probabilities.">igraph_erdos_renyi_game_gnp</a></strong></span>(&amp;g1, 100, 3.0 / 100, <span class="emphasis"><em>/*directed=*/</em></span> 0, <span class="emphasis"><em>/*loops=*/</em></span> 0);
+    <span class="strong"><strong><a class="link" href="igraph-Games.html#igraph_erdos_renyi_game_gnp" title="1.2. igraph_erdos_renyi_game_gnp — Generates a random (Erdős-Rényi) graph with fixed edge probabilities.">igraph_erdos_renyi_game_gnp</a></strong></span>(&amp;g1, 100, 3.0 / 100, <span class="emphasis"><em>/*directed=*/</em></span> 0, <span class="emphasis"><em>/*loops=*/</em></span> 0);
 
     <span class="emphasis"><em>/* Seed the generator with the same seed again,</em></span>
 <span class="emphasis"><em>     * and create a graph with the same method. */</em></span>
 
     <span class="strong"><strong><a class="link" href="igraph-Random.html#igraph_rng_seed" title="3.3. igraph_rng_seed — Seeds a random number generator.">igraph_rng_seed</a></strong></span>(<span class="strong"><strong><a class="link" href="igraph-Random.html#igraph_rng_default" title="2.1. igraph_rng_default — Query the default random number generator.">igraph_rng_default</a></strong></span>(), 1122);
 
-    <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_erdos_renyi_game_gnp" title="2.4. igraph_erdos_renyi_game_gnp — Generates a random (Erdős-Rényi) graph with fixed edge probabilities.">igraph_erdos_renyi_game_gnp</a></strong></span>(&amp;g2, 100, 3.0 / 100, <span class="emphasis"><em>/*directed=*/</em></span> 0, <span class="emphasis"><em>/*loops=*/</em></span> 0);
+    <span class="strong"><strong><a class="link" href="igraph-Games.html#igraph_erdos_renyi_game_gnp" title="1.2. igraph_erdos_renyi_game_gnp — Generates a random (Erdős-Rényi) graph with fixed edge probabilities.">igraph_erdos_renyi_game_gnp</a></strong></span>(&amp;g2, 100, 3.0 / 100, <span class="emphasis"><em>/*directed=*/</em></span> 0, <span class="emphasis"><em>/*loops=*/</em></span> 0);
 
     <span class="emphasis"><em>/* The two graphs will be identical. */</em></span>
 
-    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_is_same_graph" title="5.5. igraph_is_same_graph — Are two graphs identical as labelled graphs?">igraph_is_same_graph</a></strong></span>(&amp;g1, &amp;g2, &amp;iso);
+    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_is_same_graph" title="6.6. igraph_is_same_graph — Are two graphs identical as labelled graphs?">igraph_is_same_graph</a></strong></span>(&amp;g1, &amp;g2, &amp;iso);
 
     <span class="strong"><strong>if</strong></span> (!iso) {
         <span class="strong"><strong>return</strong></span> 1;
@@ -1464,8 +1465,8 @@ int <span class="strong"><strong>main</strong></span>(void) {
 
     <span class="emphasis"><em>/* Destroy no longer needed data structures. */</em></span>
 
-    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="4.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;g2);
-    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="4.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;g1);
+    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="5.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;g2);
+    <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="5.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;g1);
 
     <span class="strong"><strong>return</strong></span> 0;
 }
@@ -1480,6 +1481,6 @@ int <span class="strong"><strong>main</strong></span>(void) {
 </div>
 <table class="navigation-footer" width="100%" summary="Navigation footer" cellpadding="2" cellspacing="0"><tr valign="middle">
 <td align="left"><a accesskey="p" href="igraph-Data-structures.html"><b>← Chapter 7. Data structure library: vector, matrix, other data types</b></a></td>
-<td align="right"><a accesskey="n" href="igraph-Generators.html"><b>Chapter 9. Graph generators →</b></a></td>
+<td align="right"><a accesskey="n" href="igraph-Iterators.html"><b>Chapter 9. Vertex and edge selectors and sequences, iterators →</b></a></td>
 </tr></table>
 {% endraw %}
