--- a/c/html/master/igraph-Data-structures.html
+++ b/c/html/master/igraph-Data-structures.html
@@ -12512,7 +12512,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
 <span class="strong"><strong>#define</strong></span> VC 10
     <span class="strong"><strong><a class="link" href="igraph-Data-structures.html#igraph_sparsemat_init" title="4.2.1. igraph_sparsemat_init — Initializes a sparse matrix, in triplet format.">igraph_sparsemat_init</a></strong></span>(&amp;A, 1, 1, 0);
     <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_ring" title="1.14. igraph_ring — Creates a cycle graph or a path graph.">igraph_ring</a></strong></span>(&amp;G, VC, <span class="emphasis"><em>/*directed=*/</em></span> 0, <span class="emphasis"><em>/*mutual=*/</em></span> 0, <span class="emphasis"><em>/*circular=*/</em></span> 1);
-    <span class="strong"><strong><a class="link" href="igraph-Structural.html#igraph_get_adjacency_sparse" title="26.8. igraph_get_adjacency_sparse — Returns the adjacency matrix of a graph in a sparse matrix format.">igraph_get_adjacency_sparse</a></strong></span>(&amp;G, &amp;A, IGRAPH_GET_ADJACENCY_BOTH, NULL, IGRAPH_LOOPS_ONCE);
+    <span class="strong"><strong><a class="link" href="igraph-Structural.html#igraph_get_adjacency_sparse" title="27.8. igraph_get_adjacency_sparse — Returns the adjacency matrix of a graph in a sparse matrix format.">igraph_get_adjacency_sparse</a></strong></span>(&amp;G, &amp;A, IGRAPH_GET_ADJACENCY_BOTH, NULL, IGRAPH_LOOPS_ONCE);
     <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="4.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;G);
 
     <span class="strong"><strong><a class="link" href="igraph-Data-structures.html#igraph_sparsemat_compress" title="4.6.1. igraph_sparsemat_compress — Converts a sparse matrix to column-compressed format.">igraph_sparsemat_compress</a></strong></span>(&amp;A, &amp;B);
@@ -12573,7 +12573,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
     <span class="emphasis"><em>/* Transpose matrices */</em></span>
     <span class="strong"><strong><a class="link" href="igraph-Data-structures.html#igraph_sparsemat_init" title="4.2.1. igraph_sparsemat_init — Initializes a sparse matrix, in triplet format.">igraph_sparsemat_init</a></strong></span>(&amp;A, 1, 1, 0);
     <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_kary_tree" title="1.17. igraph_kary_tree — Creates a k-ary tree in which almost all vertices have k children.">igraph_kary_tree</a></strong></span>(&amp;G, 10, <span class="emphasis"><em>/*children=*/</em></span> 2, IGRAPH_TREE_OUT);
-    <span class="strong"><strong><a class="link" href="igraph-Structural.html#igraph_get_adjacency_sparse" title="26.8. igraph_get_adjacency_sparse — Returns the adjacency matrix of a graph in a sparse matrix format.">igraph_get_adjacency_sparse</a></strong></span>(&amp;G, &amp;A, IGRAPH_GET_ADJACENCY_BOTH, NULL, IGRAPH_LOOPS_ONCE);
+    <span class="strong"><strong><a class="link" href="igraph-Structural.html#igraph_get_adjacency_sparse" title="27.8. igraph_get_adjacency_sparse — Returns the adjacency matrix of a graph in a sparse matrix format.">igraph_get_adjacency_sparse</a></strong></span>(&amp;G, &amp;A, IGRAPH_GET_ADJACENCY_BOTH, NULL, IGRAPH_LOOPS_ONCE);
     <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="4.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;G);
     <span class="strong"><strong><a class="link" href="igraph-Data-structures.html#igraph_sparsemat_compress" title="4.6.1. igraph_sparsemat_compress — Converts a sparse matrix to column-compressed format.">igraph_sparsemat_compress</a></strong></span>(&amp;A, &amp;B);
     <span class="strong"><strong><a class="link" href="igraph-Data-structures.html#igraph_sparsemat_print" title="4.10.1. igraph_sparsemat_print — Prints a sparse matrix to a file.">igraph_sparsemat_print</a></strong></span>(&amp;B, stdout);
@@ -12627,8 +12627,8 @@ int <span class="strong"><strong>main</strong></span>(void) {
     <span class="strong"><strong><a class="link" href="igraph-Data-structures.html#igraph_sparsemat_init" title="4.2.1. igraph_sparsemat_init — Initializes a sparse matrix, in triplet format.">igraph_sparsemat_init</a></strong></span>(&amp;B, 1, 1, 0);
     <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_star" title="1.8. igraph_star — Creates a star graph, every vertex connects only to the center.">igraph_star</a></strong></span>(&amp;G, 10, IGRAPH_STAR_OUT, <span class="emphasis"><em>/*center=*/</em></span> 0);
     <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_ring" title="1.14. igraph_ring — Creates a cycle graph or a path graph.">igraph_ring</a></strong></span>(&amp;H, 10, <span class="emphasis"><em>/*directed=*/</em></span> 0, <span class="emphasis"><em>/*mutual=*/</em></span> 0, <span class="emphasis"><em>/*circular=*/</em></span> 1);
-    <span class="strong"><strong><a class="link" href="igraph-Structural.html#igraph_get_adjacency_sparse" title="26.8. igraph_get_adjacency_sparse — Returns the adjacency matrix of a graph in a sparse matrix format.">igraph_get_adjacency_sparse</a></strong></span>(&amp;G, &amp;A, IGRAPH_GET_ADJACENCY_BOTH, NULL, IGRAPH_LOOPS_ONCE);
-    <span class="strong"><strong><a class="link" href="igraph-Structural.html#igraph_get_adjacency_sparse" title="26.8. igraph_get_adjacency_sparse — Returns the adjacency matrix of a graph in a sparse matrix format.">igraph_get_adjacency_sparse</a></strong></span>(&amp;H, &amp;B, IGRAPH_GET_ADJACENCY_BOTH, NULL, IGRAPH_LOOPS_ONCE);
+    <span class="strong"><strong><a class="link" href="igraph-Structural.html#igraph_get_adjacency_sparse" title="27.8. igraph_get_adjacency_sparse — Returns the adjacency matrix of a graph in a sparse matrix format.">igraph_get_adjacency_sparse</a></strong></span>(&amp;G, &amp;A, IGRAPH_GET_ADJACENCY_BOTH, NULL, IGRAPH_LOOPS_ONCE);
+    <span class="strong"><strong><a class="link" href="igraph-Structural.html#igraph_get_adjacency_sparse" title="27.8. igraph_get_adjacency_sparse — Returns the adjacency matrix of a graph in a sparse matrix format.">igraph_get_adjacency_sparse</a></strong></span>(&amp;H, &amp;B, IGRAPH_GET_ADJACENCY_BOTH, NULL, IGRAPH_LOOPS_ONCE);
     <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="4.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;G);
     <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_destroy" title="4.1.4. igraph_destroy — Frees the memory allocated for a graph object.">igraph_destroy</a></strong></span>(&amp;H);
     <span class="strong"><strong><a class="link" href="igraph-Data-structures.html#igraph_sparsemat_compress" title="4.6.1. igraph_sparsemat_compress — Converts a sparse matrix to column-compressed format.">igraph_sparsemat_compress</a></strong></span>(&amp;A, &amp;C);
@@ -14828,7 +14828,7 @@ igraph_real_t igraph_sparsemat_min(igraph_sparsemat_t *A);
 <tbody><tr>
 <td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
 <td><p>
-  The minimum in the input matrix, or <code class="constant">IGRAPH_POSINFINITY</code>
+  The minimum in the input matrix, or <code class="constant">IGRAPH_INFINITY</code>
    if the matrix has zero elements.
   </p></td>
 </tr></tbody>
@@ -14879,7 +14879,7 @@ igraph_real_t igraph_sparsemat_max(igraph_sparsemat_t *A);
 <tbody><tr>
 <td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
 <td><p>
-  The maximum in the input matrix, or <code class="constant">IGRAPH_NEGINFINITY</code>
+  The maximum in the input matrix, or <code class="literal">-IGRAPH_INFINITY</code>
    if the matrix has zero elements.
   </p></td>
 </tr></tbody>
@@ -14923,13 +14923,14 @@ igraph_error_t igraph_sparsemat_minmax(igraph_sparsemat_t *A,
 <tr>
 <td><p><span class="term"><em class="parameter"><code>min</code></em>:</span></p></td>
 <td><p>
-  The minimum in the input matrix is stored here, or <code class="constant">IGRAPH_POSINFINITY</code> if the matrix has zero elements.
+  The minimum in the input matrix is stored here, or <code class="constant">IGRAPH_INFINITY</code> if the matrix has zero elements.
 </p></td>
 </tr>
 <tr>
 <td><p><span class="term"><em class="parameter"><code>max</code></em>:</span></p></td>
 <td><p>
-  The maximum in the input matrix is stored here, or <code class="constant">IGRAPH_NEGINFINITY</code> if the matrix has zero elements.
+  The maximum in the input matrix is stored here, or
+   <code class="literal">-IGRAPH_INFINITY</code> if the matrix has zero elements.
 </p></td>
 </tr>
 </tbody>
@@ -18000,7 +18001,7 @@ igraph_error_t igraph_sparsemat(igraph_t *graph, const igraph_sparsemat_t *A,
 
 One edge is created for each non-zero entry in the matrix. If you
 have a symmetric matrix, and want to create an undirected graph,
-then delete the entries in the upper diagonal first, or call <a class="link" href="igraph-Operators.html#igraph_simplify" title="3.10. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a> on the result graph to eliminate the multiple
+then delete the entries in the upper diagonal first, or call <a class="link" href="igraph-Operators.html#igraph_simplify" title="3.11. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a> on the result graph to eliminate the multiple
 edges.
 
 </p>
