--- a/c/html/master/igraph-Isomorphism.html
+++ b/c/html/master/igraph-Isomorphism.html
@@ -40,7 +40,7 @@ langversion: master
 <p>igraph provides four set of functions to deal with graph
 isomorphism problems.</p>
 <p>The <a class="link" href="igraph-Isomorphism.html#igraph_isomorphic" title="1.1. igraph_isomorphic — Are two graphs isomorphic?"><code class="function">igraph_isomorphic()</code></a> and <a class="link" href="igraph-Isomorphism.html#igraph_subisomorphic" title="1.2. igraph_subisomorphic — Decide subgraph isomorphism."><code class="function">igraph_subisomorphic()</code></a>
-functions make up the first set (in addition with the <a class="link" href="igraph-Isomorphism.html#igraph_permute_vertices" title="6.1. igraph_permute_vertices — Permute the vertices."><code class="function">igraph_permute_vertices()</code></a> function). These functions choose the
+functions make up the first set (in addition with the <a class="link" href="igraph-Isomorphism.html#igraph_permute_vertices" title="6.2. igraph_permute_vertices — Permute the vertices."><code class="function">igraph_permute_vertices()</code></a> function). These functions choose the
 algorithm which is best for the supplied input graph. (The choice is
 not very sophisticated though, see their documentation for
 details.)</p>
@@ -89,7 +89,7 @@ If one graph is directed and the other undirected then an
 </p></li>
 <li class="listitem"><p>
 If one of the graphs has multi-edges then both graphs are
-   simplified and colorized using <a class="link" href="igraph-Isomorphism.html#igraph_simplify_and_colorize" title="6.2. igraph_simplify_and_colorize — Simplify the graph and compute self-loop and edge multiplicities."><code class="function">igraph_simplify_and_colorize()</code></a> and sent to VF2.
+   simplified and colorized using <a class="link" href="igraph-Isomorphism.html#igraph_simplify_and_colorize" title="6.3. igraph_simplify_and_colorize — Simplify the graph and compute self-loop and edge multiplicities."><code class="function">igraph_simplify_and_colorize()</code></a> and sent to VF2.
 
 </p></li>
 <li class="listitem"><p>
@@ -1121,7 +1121,7 @@ int <span class="strong"><strong>main</strong></span>(void) {
     <span class="strong"><strong><a class="link" href="igraph-Generators.html#igraph_ring" title="1.14. igraph_ring — Creates a cycle graph or a path graph.">igraph_ring</a></strong></span>(&amp;ring1, 100, <span class="emphasis"><em>/*directed=*/</em></span> 0, <span class="emphasis"><em>/*mutual=*/</em></span> 0, <span class="emphasis"><em>/*circular=*/</em></span>1);
     <span class="strong"><strong>igraph_vector_int_init_range</strong></span>(&amp;perm, 0, <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_vcount" title="4.2.1. igraph_vcount — The number of vertices in a graph.">igraph_vcount</a></strong></span>(&amp;ring1));
     <span class="strong"><strong>igraph_vector_int_shuffle</strong></span>(&amp;perm);
-    <span class="strong"><strong><a class="link" href="igraph-Isomorphism.html#igraph_permute_vertices" title="6.1. igraph_permute_vertices — Permute the vertices.">igraph_permute_vertices</a></strong></span>(&amp;ring1, &amp;ring2, &amp;perm);
+    <span class="strong"><strong><a class="link" href="igraph-Isomorphism.html#igraph_permute_vertices" title="6.2. igraph_permute_vertices — Permute the vertices.">igraph_permute_vertices</a></strong></span>(&amp;ring1, &amp;ring2, &amp;perm);
 
     <span class="emphasis"><em>/* Everything has the same colors */</em></span>
     <span class="strong"><strong>igraph_vector_int_init</strong></span>(&amp;color1, <span class="strong"><strong><a class="link" href="igraph-Basic.html#igraph_vcount" title="4.2.1. igraph_vcount — The number of vertices in a graph.">igraph_vcount</a></strong></span>(&amp;ring1));
@@ -3093,13 +3093,74 @@ Time complexity: O(1).
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
 <a name="isomorphism-utility-functions"></a>6. Utility functions</h2></div></div></div>
 <div class="toc"><dl class="toc">
-<dt><span class="section"><a href="igraph-Isomorphism.html#igraph_permute_vertices">6.1. <code class="function">igraph_permute_vertices</code> —  Permute the vertices.</a></span></dt>
-<dt><span class="section"><a href="igraph-Isomorphism.html#igraph_simplify_and_colorize">6.2. <code class="function">igraph_simplify_and_colorize</code> —  Simplify the graph and compute self-loop and edge multiplicities.</a></span></dt>
+<dt><span class="section"><a href="igraph-Isomorphism.html#igraph_invert_permutation">6.1. <code class="function">igraph_invert_permutation</code> —  Inverts a permutation.</a></span></dt>
+<dt><span class="section"><a href="igraph-Isomorphism.html#igraph_permute_vertices">6.2. <code class="function">igraph_permute_vertices</code> —  Permute the vertices.</a></span></dt>
+<dt><span class="section"><a href="igraph-Isomorphism.html#igraph_simplify_and_colorize">6.3. <code class="function">igraph_simplify_and_colorize</code> —  Simplify the graph and compute self-loop and edge multiplicities.</a></span></dt>
 </dl></div>
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
-<a name="igraph_permute_vertices"></a>6.1. <code class="function">igraph_permute_vertices</code> —  Permute the vertices.</h3></div></div></div>
+<a name="igraph_invert_permutation"></a>6.1. <code class="function">igraph_invert_permutation</code> —  Inverts a permutation.</h3></div></div></div>
 <a class="indexterm" name="id-1.18.7.2.2"></a><p>
+</p>
+<div class="informalexample"><pre class="programlisting">
+igraph_error_t igraph_invert_permutation(const igraph_vector_int_t *permutation, igraph_vector_int_t *inverse);
+</pre></div>
+<p>
+</p>
+<p>
+
+
+
+Produces the inverse of <em class="parameter"><code>permutation</code></em> into <em class="parameter"><code>inverse</code></em> and at the same time it checks
+that the permutation vector is valid, i.e. all indices are within range and there are
+no duplicate entries.
+
+</p>
+<p><b>Arguments: </b>
+</p>
+<div class="variablelist"><table border="0" class="variablelist">
+<colgroup>
+<col align="left" valign="top">
+<col>
+</colgroup>
+<tbody>
+<tr>
+<td><p><span class="term"><em class="parameter"><code>permutation</code></em>:</span></p></td>
+<td><p>
+  A permutation vector containing 0-based integer indices.
+</p></td>
+</tr>
+<tr>
+<td><p><span class="term"><em class="parameter"><code>inverse</code></em>:</span></p></td>
+<td><p>
+  An initialized vector. The inverse of <em class="parameter"><code>permutation</code></em> will be stored here.
+</p></td>
+</tr>
+</tbody>
+</table></div>
+<p>
+</p>
+<p><b>Returns: </b></p>
+<div class="variablelist"><table border="0" class="variablelist">
+<colgroup>
+<col align="left" valign="top">
+<col>
+</colgroup>
+<tbody><tr>
+<td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
+<td><p>
+  Error code.
+  </p></td>
+</tr></tbody>
+</table></div>
+<p>
+ 
+</p>
+</div>
+<div class="section">
+<div class="titlepage"><div><div><h3 class="title">
+<a name="igraph_permute_vertices"></a>6.2. <code class="function">igraph_permute_vertices</code> —  Permute the vertices.</h3></div></div></div>
+<a class="indexterm" name="id-1.18.7.3.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_permute_vertices(const igraph_t *graph, igraph_t *res,
@@ -3171,8 +3232,8 @@ vertices and edges.
 </div>
 <div class="section">
 <div class="titlepage"><div><div><h3 class="title">
-<a name="igraph_simplify_and_colorize"></a>6.2. <code class="function">igraph_simplify_and_colorize</code> —  Simplify the graph and compute self-loop and edge multiplicities.</h3></div></div></div>
-<a class="indexterm" name="id-1.18.7.3.2"></a><p>
+<a name="igraph_simplify_and_colorize"></a>6.3. <code class="function">igraph_simplify_and_colorize</code> —  Simplify the graph and compute self-loop and edge multiplicities.</h3></div></div></div>
+<a class="indexterm" name="id-1.18.7.4.2"></a><p>
 </p>
 <div class="informalexample"><pre class="programlisting">
 igraph_error_t igraph_simplify_and_colorize(
@@ -3261,7 +3322,7 @@ vertex and edge colors.
 <tbody><tr>
 <td><p><span class="term"><em class="parameter"><code></code></em></span></p></td>
 <td><p>
-  <a class="link" href="igraph-Operators.html#igraph_simplify" title="3.10. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a>, <a class="link" href="igraph-Isomorphism.html#igraph_isomorphic_vf2" title="3.1. igraph_isomorphic_vf2 — Isomorphism via VF2."><code class="function">igraph_isomorphic_vf2()</code></a>, <a class="link" href="igraph-Isomorphism.html#igraph_subisomorphic_vf2" title="3.7. igraph_subisomorphic_vf2 — Decide subgraph isomorphism using VF2"><code class="function">igraph_subisomorphic_vf2()</code></a>
+  <a class="link" href="igraph-Operators.html#igraph_simplify" title="3.11. igraph_simplify — Removes loop and/or multiple edges from the graph."><code class="function">igraph_simplify()</code></a>, <a class="link" href="igraph-Isomorphism.html#igraph_isomorphic_vf2" title="3.1. igraph_isomorphic_vf2 — Isomorphism via VF2."><code class="function">igraph_isomorphic_vf2()</code></a>, <a class="link" href="igraph-Isomorphism.html#igraph_subisomorphic_vf2" title="3.7. igraph_subisomorphic_vf2 — Decide subgraph isomorphism using VF2"><code class="function">igraph_subisomorphic_vf2()</code></a>
   </p></td>
 </tr></tbody>
 </table></div>
