--- a/c/html/master/index.html
+++ b/c/html/master/index.html
@@ -63,9 +63,9 @@ langversion: master
 </div>
 </div>
 </div></div>
-<div><p class="releaseinfo">0.10.16-59-g0224bb374</p></div>
+<div><p class="releaseinfo">0.10.16-148-gbcb8fbcfa</p></div>
 <div><div class="legalnotice">
-<a name="id-1.1.4"></a><p>This manual is for igraph, version 0.10.16-59-g0224bb374.</p>
+<a name="id-1.1.4"></a><p>This manual is for igraph, version 0.10.16-148-gbcb8fbcfa.</p>
 <p>
       Copyright (C) 2005-2019 Gábor Csárdi and Tamás Nepusz.
       Copyright (C) 2020-2025 igraph development team.
